@@ -9,6 +9,11 @@ Thanks!
 2.0.0.2014
 ----------
 - Fix "Folder NOT xxx" implementation which wasn't working right for group folders.
+- Cmd+W closes the Download, Preference or Activity windows even when they are active.
+- $FeedDescription$ added as a tag for styles. This expands to the feed description if it
+  is available.
+- Fixed bug where AppleScript 'current article' on an article in a group returned a null
+  reference.
 
 2.0.0.2013
 ----------
